# ForgeLM

./: .gitignore  Dockerfile  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: eval.yaml
configs/model/: llama3.yaml
configs/train/: qlora_r16.yaml
docs/: API.md  ARCHITECTURE.md
scripts/: download_data.py  evaluate.py  prepare_data.py  serve.py  sweep_rank.py  train.py  vendor_official.sh
src/text2sql/common/: config.py  logging.py  seed.py
src/text2sql/data/: format.py  prompt.py  schema.py  splits.py
src/text2sql/eval/: baselines.py  difficulty.py  execution.py  extract.py  harness.py  stats.py
src/text2sql/eval/official/: README.md  __init__.py  exec_eval.py  hardness.py
src/text2sql/eval/official/_vendor/: .gitkeep
src/text2sql/serve/: app.py  inference.py  observability.py  schemas.py
src/text2sql/train/: callbacks.py  qlora.py  trainer.py
tests/: test_execution.py  test_extract.py  test_harness_parity.py  test_prompt.py  test_schema.py
ui/: app.py
